kubernetes/apps/database/dragonfly/cluster/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/networkpolicyegressrule-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-cluster-allow-prometheus
spec:
  ingress:
    - ports:
        - port: 9999
          protocol: TCP
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
  podSelector:
    matchLabels:
      app: dragonfly-cluster
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
